Fixes for Coverity Defects of Category : FB.DM_BOOLEAN_CTOR