@@ -131,10 +131,10 @@ public class OCSPSigningCert extends CertificateInfo {
     protected KeyUsageExtension getKeyUsageExtension() throws IOException {
         KeyUsageExtension extension = new KeyUsageExtension();
 
-        extension.set(KeyUsageExtension.DIGITAL_SIGNATURE, new Boolean(true));
-        extension.set(KeyUsageExtension.NON_REPUDIATION, new Boolean(true));
-        extension.set(KeyUsageExtension.KEY_CERTSIGN, new Boolean(true));
-        extension.set(KeyUsageExtension.CRL_SIGN, new Boolean(true));
+        extension.set(KeyUsageExtension.DIGITAL_SIGNATURE, Boolean.valueOf(true));
+        extension.set(KeyUsageExtension.NON_REPUDIATION, Boolean.valueOf(true));
+        extension.set(KeyUsageExtension.KEY_CERTSIGN, Boolean.valueOf(true));
+        extension.set(KeyUsageExtension.CRL_SIGN, Boolean.valueOf(true));
         return extension;
     }
 }
