@@ -110,10 +110,10 @@ public class SSLCert extends CertificateInfo {
     protected KeyUsageExtension getKeyUsageExtension() throws IOException {
         KeyUsageExtension extension = new KeyUsageExtension();
 
-        extension.set(KeyUsageExtension.DIGITAL_SIGNATURE, new Boolean(true));
-        extension.set(KeyUsageExtension.NON_REPUDIATION, new Boolean(true));
-        extension.set(KeyUsageExtension.KEY_ENCIPHERMENT, new Boolean(true));
-        extension.set(KeyUsageExtension.DATA_ENCIPHERMENT, new Boolean(true));
+        extension.set(KeyUsageExtension.DIGITAL_SIGNATURE, Boolean.valueOf(true));
+        extension.set(KeyUsageExtension.NON_REPUDIATION, Boolean.valueOf(true));
+        extension.set(KeyUsageExtension.KEY_ENCIPHERMENT, Boolean.valueOf(true));
+        extension.set(KeyUsageExtension.DATA_ENCIPHERMENT, Boolean.valueOf(true));
         return extension;
     }
 }
