@@ -83,7 +83,7 @@ public class Extensions extends Vector<Extension>
             for (int i = 0; i < extLen; i++) {
                 Array.setByte(value, i, extData[i]);
             }
-            Object[] passed = new Object[] { new Boolean(ext.isCritical()),
+            Object[] passed = new Object[] { Boolean.valueOf(ext.isCritical()),
                                                         value };
             CertAttrSet certExt = cons.newInstance(passed);
             map.put(certExt.getName(), (Extension) certExt);
